chore(sidebar): fix issue where main content was overlapping

--- a/ui/src/components/chat/welcome/style.scss
+++ b/ui/src/components/chat/welcome/style.scss
@@ -1,4 +1,5 @@
 #welcome {
+  overflow: hidden;
   display: inline-flex;
   flex-grow: 1;
   flex-direction: column;
